# rtsp2sip

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
src/: CallSession.cpp  CallSession.h  SipClient.cpp  SipClient.h  main.cpp
