cmake_minimum_required(VERSION 3.22)
project(rtsp2sip)

set(CMAKE_CXX_STANDARD 17)

include (CheckIncludeFile)

function(checkInclude file def)
    check_include_file(${file} ${def})
    if(${${def}})
        add_definitions(-D${def})
    endif()
endfunction(checkInclude)

checkInclude (assert.h HAVE_ASSERT_H)
checkInclude (ctype.h HAVE_CTYPE_H)
checkInclude (dict/dict.h HAVE_DICT_DICT_H)
checkInclude (dlfcn.h HAVE_DLFCN_H)
checkInclude (fcntl.h HAVE_FCNTL_H)
checkInclude (inttypes.h HAVE_INTTYPES_H)
checkInclude (malloc.h HAVE_MALLOC_H)
checkInclude (memory.h HAVE_MEMORY_H)
checkInclude (semaphore.h HAVE_SEMAPHORE_H)
checkInclude (signal.h HAVE_SIGNAL_H)
checkInclude (stdarg.h HAVE_STDARG_H)
checkInclude (stdint.h HAVE_STDINT_H)
checkInclude (stdio.h HAVE_STDIO_H)
checkInclude (stdlib.h HAVE_STDLIB_H)
checkInclude (strings.h HAVE_STRINGS_H)
checkInclude (string.h HAVE_STRING_H)
checkInclude (syslog.h HAVE_SYSLOG_H)
checkInclude (sys/select.h HAVE_SYS_SELECT_H)
checkInclude (sys/sem.h HAVE_SYS_SEM_H)
checkInclude (sys/signal.h HAVE_SYS_SIGNAL_H)
checkInclude (sys/stat.h HAVE_SYS_STAT_H)
checkInclude (sys/time.h HAVE_SYS_TIME_H)
checkInclude (sys/types.h HAVE_SYS_TYPES_H)
checkInclude (sys/unistd.h HAVE_SYS_UNISTD_H)
checkInclude (time.h HAVE_TIME_H)
checkInclude (unistd.h HAVE_UNISTD_H)
checkInclude (varargs.h HAVE_VARARGS_H)
checkInclude (ares.h HAVE_ARES_H)
checkInclude (arpa/inet.h HAVE_ARPA_INET_H)
checkInclude (arpa/nameser_compat.h HAVE_ARPA_NAMESER_COMPAT_H)
checkInclude (arpa/nameser.h HAVE_ARPA_NAMESER_H)
checkInclude (limits.h HAVE_LIMITS_H)
checkInclude (nameser8_compat.h HAVE_NAMESER8_COMPAT_H)
checkInclude (netdb.h HAVE_NETDB_H)
checkInclude (netinet/in.h HAVE_NETINET_IN_H)
checkInclude (netinet/tcp.h HAVE_NETINET_TCP_H)
#checkInclude (openssl/ssl.h HAVE_OPENSSL_SSL_H)
checkInclude (regex.h HAVE_REGEX_H)
checkInclude (resolv.h HAVE_RESOLV_H)
checkInclude (sys/epoll.h HAVE_SYS_EPOLL_H)
checkInclude (sys/ioctl.h HAVE_SYS_IOCTL_H)
checkInclude (sys/param.h HAVE_SYS_PARAM_H)
checkInclude (sys/socket.h HAVE_SYS_SOCKET_H)
checkInclude (sys/soundcard.h HAVE_SYS_SOUNDCARD_H)

include (CheckFunctionExists)
CHECK_FUNCTION_EXISTS("getifaddrs" HAVE_GETIFADDRS)
if(${HAVE_GETIFADDRS})
    add_definitions(-DHAVE_GETIFADDRS)
endif()
CHECK_FUNCTION_EXISTS("localtime" HAVE_LOCALTIME)
if(${HAVE_LOCALTIME})
    add_definitions(-DHAVE_LOCALTIME)
endif()
CHECK_FUNCTION_EXISTS("gmtime" HAVE_GMTIME)
if(${HAVE_GETIFADDRS})
    add_definitions(-DHAVE_GMTIME)
endif()
CHECK_FUNCTION_EXISTS("gmtime_r" HAVE_GMTIME_R)
if(${HAVE_GETIFADDRS})
    add_definitions(-DHAVE_GMTIME_R)
endif()
add_definitions(-DHAVE_PTHREAD -DHAVE_STRUCT_TIMEVAL -DENABLE_TRACE)

include_directories(3rd/libexosip2-5.3.0/include)
include_directories(3rd/libosip2-5.3.1/include)
include_directories(3rd/ZLMediaKit/src)
include_directories(3rd/ZLMediaKit/3rdpart/ZLToolKit/src)
file(GLOB_RECURSE SipStackSrc 3rd/libexosip2-5.3.0/*.c 3rd/libosip2-5.3.1/*.c)
add_library(sip STATIC ${SipStackSrc})

set(ENABLE_OPENSSL OFF CACHE BOOL "")
set(ENABLE_HLS OFF CACHE BOOL "")
set(ENABLE_MP4 OFF CACHE BOOL "")
set(ENABLE_PLAYER OFF CACHE BOOL "")
set(ENABLE_SERVER OFF CACHE BOOL "")
set(ENABLE_SRT OFF CACHE BOOL "")
set(ENABLE_TESTS OFF CACHE BOOL "")
set(ENABLE_SCTP OFF CACHE BOOL "")
set(ENABLE_WEBRTC OFF CACHE BOOL "")
add_subdirectory(3rd/ZLMediaKit)


set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Os -Wall -s")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Os -Wall -s")
set(CMAKE_EXE_LINKER_FLAGS "-static")

file(GLOB_RECURSE SRC src/*.c src/*.cpp)
add_executable(rtsp2sip ${SRC})

target_link_libraries(rtsp2sip sip pthread zlmediakit zltoolkit jsoncpp)
